src/diag/snapshots/cargo_deny__diag__grapher__test__build_graph_feature_node.snap
---
source: src/diag/grapher.rs
expression: text
---
smallvec v1.13.2
└── smallvec feature 'serde' 
    └── features v0.1.0
