src/diag/snapshots/cargo_deny__diag__grapher__test__collect_root_paths_graph.snap
---
source: src/diag/grapher.rs
expression: graph_text
---
camino v1.1.7
└── cargo_metadata v0.18.1
    └── krates v0.16.6
        └── wildcards-test-allow-git v0.1.0
            ├── member-one v0.1.0
            │   ├── (build) member-two v0.1.0
            │   │   └── root v0.1.0
            │   └── root v0.1.0 (*)
            └── (build) member-two v0.1.0 (*)
